Fix layout issues

--- a/packages/ignition/src/app/globals.css
+++ b/packages/ignition/src/app/globals.css
@@ -73,6 +73,10 @@ html {
     height: 100%;
   }
 
+  .no-wrap > * {
+    text-wrap: nowrap;
+  }
+
   @media (max-width: 1024px) {
     .icon-info-area {
       height: calc(100vh - theme(height.20));
